--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -48,7 +48,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon/favicon-16x16.png" />
     <!-- Ample additions end -->
 
-    <title>Seamless Geyser</title>
+    <title>Seamless Farms</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
