--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -46,6 +46,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="96x96" href="%PUBLIC_URL%/favicon/favicon-96x96.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon/favicon-16x16.png" />
+    <link rel="icon" type="image/svg" href="%PUBLIC_URL%/favicon/favicon.svg" />
     <!-- Ample additions end -->
 
     <title>Seamless Farms</title>
